Fix gap in projects card

--- a/style.css
+++ b/style.css
@@ -177,7 +177,7 @@ img.icon-grey {
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-template-rows: min-content auto;
     grid-auto-rows: auto;
-    gap: 15px;
+    gap: 10px;
 }
 
 .projects .projects-heading {
